[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[project]
name = "mech"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "open-autonomy==0.21.19",
    "open-aea-ledger-ethereum==2.2.1",
    "open-aea-ledger-cosmos==2.2.1",
    "open-aea-test-autonomy==0.21.19",
    "open-aea-cli-ipfs==2.2.1",
    "open-aea-helpers==0.21.19",
    "requests==2.32.5",
    "grpcio==1.78.0",
    "asn1crypto==1.4.0",
    "hypothesis==6.21.6",
    "web3==7.14.1",
    "pytest-asyncio==1.3.0",
    "aiohttp==3.13.4",
    "certifi==2026.2.25",
    "multidict==6.7.1",
    "ecdsa==0.19.2",
    "py-ecc==8.0.0",
    "websocket_client==0.59.0",
    "pytest==8.4.2",
    "PyYAML==6.0.1",
    "openai==1.30.2",
    "openapi-core==0.22.0",
    "openapi-spec-validator==0.7.2",
    "prometheus-client==0.23.1",
    "pebble==5.1.3",
    "pip==26.0.1",
]

[project.urls]
Repository = "https://github.com/valory-xyz/mech"

[dependency-groups]
dev = [
    "setuptools>=78.0.1,<79",
    "tomte[cli, tests] @ git+https://github.com/valory-xyz/tomte.git@102f5e99f3a688725d0497e0bd520bab959fd28c",
]

[tool.uv]
default-groups = "all"
prerelease = "allow"

[tool.tomte]
# Narrows pytest scope: delivery_rate_abci tests are skipped (currently
# flaky / incomplete — separate cleanup). Drop this field once those
# tests are green so tomte's default discovery picks up everything.
pytest_targets = [
    "packages/valory/skills/mech_abci/tests",
    "packages/valory/skills/task_submission_abci/tests",
    "packages/valory/skills/task_execution/tests",
]
# Auto-merged with packages.json third_party (e.g. abstract_abci).
# List entries are repo-specific dev packages whose handlers don't
# conform to the ABCI shape (utility skills, not consensus skills).
check_handlers_ignores = [
    "contract_subscription",
    "task_execution",
    "websocket_client",
]
tomte_dep_pin = " @ git+https://github.com/valory-xyz/tomte.git@102f5e99f3a688725d0497e0bd520bab959fd28c"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "strict"
markers = [
    "integration: marks integration tests which require other network services",
    "e2e: marks end-to-end agent tests",
]
filterwarnings = ["ignore::DeprecationWarning:aea.*:"]

[tool.uv.build-backend]
module-name = ["packages"]
module-root = ""
